apps/overlays/staging/infrastructure/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: prometheus.staging.weijun.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
